bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: ';' expected but ')' found.
  if (temp1<0 && temp2>100)||(temp1>100 && temp2<0)){
                                                   ^